--- a/LP_I/E1_forms/src/main/resources/application.yml
+++ b/LP_I/E1_forms/src/main/resources/application.yml
@@ -1,7 +1,11 @@
-# Configurações do servidor
 server:
   port: 8080
 
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/lp?useUnicode=true&characterEncoding=UTF-8
+    username: root
+    password: development
+    driver-class-name: com.mysql.cj.jdbc.Driver
   profiles:
     active: dev
