--- a/LP_I/e1_forms_frontend/package.json
+++ b/LP_I/e1_forms_frontend/package.json
@@ -12,7 +12,8 @@
     "clsx": "^2.1.0",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/node": "^20",
